# 3D-RAMS

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  amplify.yml
.shea/: app-profile.json
agentcore-prototype/: README.md  (+2 more)
app/rams_agent_tools/: README.md  pyproject.toml
app/rams_agent_tools/fixtures/public-lambeth-thames/: flood_risk_zones.json  planning_context.txt  planning_data_brownfield.json
app/rams_agent_tools/rams_agent_tools/: __init__.py  bedrock_adapter.py  config.py  fixtures.py  planner_context.py
app/rams_agent_tools/rams_agent_tools/tools/: __init__.py  annotations.py  architecture.py  briefing.py  geospatial.py  hazards.py  materials.py  planning.py  registry.py  request.py  safety.py  telemetry.py
app/rams_agent_tools/tool_schemas/: apply_bedrock_briefing.json  ingest_material_references.json
app/rams_supervisor_runtime/: README.md  fixtures  main.py  pyproject.toml  rams_agent_tools
app/rams_supervisor_runtime/mcp_client/: client.py
app/rams_supervisor_runtime/model/: load.py
app/rams_supervisor_runtime/supervisor_core/: agent.py  agentcore_adapter.py  agentic_eval.py  dogfood_summary.py  harness_contract.py  planner.py  reasoning.py  report_access.py  report_grounding_repair.py  report_store.py  review_gate.py  review_loop.py  runtime_observability.py  schemas.py  structured_report.py  subagent_invoker.py
app/rams_supervisor_runtime/tests/: test_agent_workflow.py  test_agentic_eval.py  test_invocations.py  test_material_retrieval.py  test_openai_gateway.py  test_planner.py  test_subagent_invoker.py
(+216 files in other folders)
