[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rams-agent-tools"
version = "0.1.0"
description = "Shared 3D-RAMS tool functions and deterministic fixtures for AgentCore runtimes and subagents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.35,<2.0",
    "botocore[crt] >= 1.35.0",
]

[tool.hatch.build.targets.wheel]
packages = ["rams_agent_tools"]

[tool.hatch.build.targets.wheel.force-include]
"fixtures" = "fixtures"
