[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rams_supervisor_runtime"
version = "0.1.0"
description = "AgentCore Runtime Application using Strands SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aws-opentelemetry-distro",
    "bedrock-agentcore >= 1.9.1",
    "boto3>=1.35,<2.0",
    "botocore[crt] >= 1.35.0",
    "eval_type_backport>=0.2.0; python_version < '3.10'",
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "mcp >= 1.19.0",
    "openai>=1.68,<3.0",
    "pydantic>=2.9,<3.0",
    "strands-agents >= 1.15.0",
    "uvicorn[standard]>=0.30,<1.0",
    
]

[tool.hatch.build.targets.wheel]
packages = ["."]
